syntax = "proto3";

package storage;

option go_package = "github.com/bobboyms/storage-engine/pkg/storage";

message DocumentEntry {
    string table_name = 1;
    string index_name = 2;
    Key key = 3;
    bytes document = 4;
}

message Key {
    oneof value {
        int64 int_value = 1;
        string string_value = 2;
        bool bool_value = 3;
        double float_value = 4;
        int64 date_value = 5; // UnixNano
    }
}

message MultiIndexEntry {
    string table_name = 1;
    map<string, Key> keys = 2;
    bytes document = 3;
}
